// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs about snapshot 1`] = `
<div
  className="relative h-[40px] rounded-full"
>
  <button
    className="absolute w-1/3 h-full z-20 grid grid-cols-1 items-center border-4 border-white rounded-full text-center truncate bg-background-hl"
    onClick={[Function]}
  >
    Publications
  </button>
  <button
    className="absolute w-2/3 h-full z-10 flex items-center border-4 border-white rounded-full bg-background-hl"
    onClick={[Function]}
  >
    <div
      className="flex-1"
    />
    <div
      className="flex-1 text-center truncate"
    >
      Collections
    </div>
  </button>
  <button
    className="absolute w-full h-full z-0 flex items-center border-4 border-white rounded-full bg-primary text-white"
    onClick={[Function]}
  >
    <div
      className="flex-1"
    />
    <div
      className="flex-1"
    />
    <div
      className="flex-1 text-center truncate"
    >
      A propos
    </div>
  </button>
</div>
`;

exports[`Tabs collections snapshot 1`] = `
<div
  className="relative h-[40px] rounded-full"
>
  <button
    className="absolute w-1/3 h-full z-20 grid grid-cols-1 items-center border-4 border-white rounded-full text-center truncate bg-background-hl"
    onClick={[Function]}
  >
    Publications
  </button>
  <button
    className="absolute w-2/3 h-full z-10 flex items-center border-4 border-white rounded-full bg-primary text-white"
    onClick={[Function]}
  >
    <div
      className="flex-1"
    />
    <div
      className="flex-1 text-center truncate"
    >
      Collections
    </div>
  </button>
  <button
    className="absolute w-full h-full z-0 flex items-center border-4 border-white rounded-full bg-background-hl"
    onClick={[Function]}
  >
    <div
      className="flex-1"
    />
    <div
      className="flex-1"
    />
    <div
      className="flex-1 text-center truncate"
    >
      A propos
    </div>
  </button>
</div>
`;

exports[`Tabs publications snapshot 1`] = `
<div
  className="relative h-[40px] rounded-full"
>
  <button
    className="absolute w-1/3 h-full z-20 grid grid-cols-1 items-center border-4 border-white rounded-full text-center truncate bg-primary text-white"
    onClick={[Function]}
  >
    Publications
  </button>
  <button
    className="absolute w-2/3 h-full z-10 flex items-center border-4 border-white rounded-full bg-background-hl"
    onClick={[Function]}
  >
    <div
      className="flex-1"
    />
    <div
      className="flex-1 text-center truncate"
    >
      Collections
    </div>
  </button>
  <button
    className="absolute w-full h-full z-0 flex items-center border-4 border-white rounded-full bg-background-hl"
    onClick={[Function]}
  >
    <div
      className="flex-1"
    />
    <div
      className="flex-1"
    />
    <div
      className="flex-1 text-center truncate"
    >
      A propos
    </div>
  </button>
</div>
`;
